--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   http: ^1.6.0
+  firebase_core:
+  firebase_auth:
+  google_sign_in: ^6.3.0
 
 dev_dependencies:
   flutter_test:
