--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   firebase_core:
   firebase_auth:
   google_sign_in: ^6.3.0
+  provider:
+  image_picker: 
 
 dev_dependencies:
   flutter_test:
